cmake_minimum_required(VERSION 3.17)
project(cplusplus_runoob_demo)

set(CMAKE_CXX_STANDARD 11)

add_executable(cplusplus_runoob_demo main.cpp 1-cpp-tutorial.cpp 2-cpp-data-types.cpp 3-cpp-variable-types.cpp 4-cpp-variable-scope/local.cpp 4-cpp-variable-scope/global.cpp 4-cpp-variable-scope/local_global.cpp)